--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "ionic-mocks": "^1.3.0",
     "jquery": "^3.5.1",
+    "mockjs": "^1.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
