--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
     "bootstrap": "^4.5.3",
+    "cordova-sqlite-storage": "^5.1.0",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.5",
@@ -34,7 +36,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
