--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
     "@capacitor/ios": "^2.4.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "bootstrap": "^4.5.3",
+    "cordova-plugin-geolocation": "^4.1.0",
     "cordova-sqlite-storage": "^5.1.0",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.1.0",
@@ -43,6 +46,7 @@
     "@angular/language-service": "~10.0.0",
     "@capacitor/cli": "2.4.2",
     "@ionic/angular-toolkit": "^2.3.0",
+    "@types/googlemaps": "^3.40.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
