--- a/angular.json
+++ b/angular.json
@@ -103,14 +103,7 @@
                 "input": "src/assets/scss/purpose-dark.scss"
               }
             ],
-            "scripts": [
-              {
-                "input": "src/assets/js/purpose.core.js"
-              },
-              {
-                "input": "src/assets/js/purpose.js"
-              }
-            ],
+            "scripts": [],
             "assets": [
               {
                 "glob": "favicon.ico",
